0032118: Visualization, Graphic3d_MarkerImage::StandardMarker() - return marker with pre-defined id